fix squashed logo

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p { font-size: 16px; }
 img.custom-logo {
     max-width: 60px;
     max-height: 60px;
-    padding: 8px 0 8px 0;
+    padding: 2px 0 2px 0;
 }
 a.nav-link {
     text-transform: uppercase;
